--- a/Portfolio.css
+++ b/Portfolio.css
@@ -255,6 +255,17 @@ padding: 100px 0;
 
 /* End Projets Section */
 
+/* About Section */
+#about .about {
+    flex-direction: column-reverse;
+    text-align: center;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 100px 20px;
+
+}
+/* End About Section */
+
 /* Keyframes */
 @keyframes text_reveal_box {
     50% {
